Anonymous | Login | 2019-02-18 15:57 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0027356 | Open CASCADE | [OCCT] OCCT:Modeling Data | public | 2016-04-05 17:04 | 2018-06-29 21:19 | ||||
Reporter | oan | ||||||||
Assigned To | bugmaster | ||||||||
Priority | low | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.3.0 | Fixed in Version | [OCCT] 7.3.0 | ||||||
Summary | 0027356: BRepTools::Clean() does not clean free edges from Poly_Polygon3D | ||||||||
Description | This problem has appeared during investigation of 0026928 issue. Source shape sent by user Timo contains free edges with discretization stored in Poly_Polygon3D. However, it is impossible to clean this data that can be generated by BRepMesh whereas triangulation itself and polygon on triangulation data are cleaned successfully. | ||||||||
Steps To Reproduce | bugs moddata_3 bug27356 #manual steps restore comp.brep a tclean a explode a e donly a_6 dump a_6 # ------- #Dump of 1 Polygon3Ds # ------- # 1 : Polygon3D with 14 Nodes #with parameters #Deflection : 0.184044204640587 # ..... | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs modalg_6 bug27356 | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|||||||||||||
|
![]() |
|
(0052405) Timo (updater) 2016-04-05 17:22 |
Looking at the history of BRepTools, I think this behaviour was introduced in the frame of #25479. |
(0052406) oan (developer) 2016-04-05 17:37 |
Sorry Timo, suppose you are incorrect, because old implementation also tried to remove only Poly_PolygonOnTriangulation by checking IsPolygonOnTriangulation() status. For Poly_Polygon3D it is always false. So it seems there were no such functionality before this issue at all. |
(0052420) Timo (updater) 2016-04-06 10:43 |
ok |
(0052757) git (administrator) 2016-04-15 17:12 |
Branch CR27356 has been created by oan. SHA-1: e614b2ee49f191c0aaff595b3a9efdc056e47fa4 Detailed log of new commits: Author: oan Date: Fri Apr 15 17:12:28 2016 +0300 0027356: BRepTools::Clean() does not clean free edges from Poly_Polygon3D Added block cleaning 3D polygons on edges. Added test case. |
(0052758) oan (developer) 2016-04-15 17:13 |
Dear Mikhail, could you please review the branch CR27356. |
(0053697) msv (developer) 2016-04-28 17:09 |
Reviewed. |
(0053747) git (administrator) 2016-04-29 17:37 |
Branch CR27356 has been updated forcibly by apv. SHA-1: af47b97a9020b45cd1dff90f49a281cf2ecde8fc |
(0053748) apv (tester) 2016-04-29 17:37 |
Branch CR27356 has been rebased on the current master |
(0053794) git (administrator) 2016-05-04 13:56 |
Branch CR27356 has been updated by apv. SHA-1: ac8eec9dc9f629d94497ae0ff81cf938c4ffcc4c Detailed log of new commits: Author: apv Date: Wed May 4 13:56:39 2016 +0300 Correction of test case bugs/modalg_6/bug27356 |
(0053796) apv (tester) 2016-05-04 14:03 |
Dear BugMaster, Branch CR27356 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: af47b97a9020b45cd1dff90f49a281cf2ecde8fc Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 0 (0 on master) products component: Linux: 72 Windows: 4 MacOS: 1134 Regressions/Differences: Not detected Testing cases: bugs modalg_6 bug27356 - OK http://occt-tests/CR27356-master-OCCT/Debian70-64/bugs/modalg_6/bug27356.html [^] http://occt-tests/CR27356-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug27356.html [^] There are problematic CPU test cases: bugs step bug25167: 1.7628113 / 0.2496016 [+606.25%] bugs mesh bug25469_3: 1.3728088 / 0.2184014 [+528.57%] bugs fclasses bug22980: 2.1372137 / 0.8268053 [+158.49%] Testing on Linux: Total MEMORY difference: 87804526 / 87516682 [+0.33%] Total CPU difference: 19455.57000000011 / 19371.220000000183 [+0.44%] Testing on Windows: Total MEMORY difference: 55503677 / 55541866 [-0.07%] Total CPU difference: 18080.437899498793 / 18267.73270009882 [-1.03%] |
(0053797) apv (tester) 2016-05-04 14:04 |
Dear oan, Branch CR27356 has been rejected due to: - CPU problems |
(0059323) apv (tester) 2016-10-28 14:27 |
Testing results are too old and will be deleted. |
(0070612) git (administrator) 2017-09-15 19:08 |
Branch CR27356_1 has been created by abv. SHA-1: cc7640de2c519df475a779cd2feb1bc7285b7ec0 Detailed log of new commits: Author: oan Date: Fri Apr 15 17:12:28 2016 +0300 0027356: BRepTools::Clean() does not clean free edges from Poly_Polygon3D Added code to clean 3D polygons on edges in BRepTools::Clean(). |
(0070632) git (administrator) 2017-09-18 14:13 |
Branch CR27356_1 has been updated by abv. SHA-1: 74d796b6838f67d63372d7a544a763bf34856658 Detailed log of new commits: Author: abv Date: Mon Sep 18 14:13:45 2017 +0300 Added test bugs moddata_3 bug27356 |
(0070633) abv (manager) 2017-09-18 14:16 |
Fix has been successfully tested, see Jenkins job CR27356-master-abv; please consider for integration |
(0070646) bugmaster (administrator) 2017-09-18 16:43 |
Combination - OCCT branch :CR27356_1 SHA-1: 74d796b6838f67d63372d7a544a763bf34856658 Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. http://jenkins-test-10.nnov.opencascade.com/view/CR29103-master/ [^] [^] Number of compiler warnings: OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 4 (4 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0070994) git (administrator) 2017-09-29 17:11 |
Branch CR27356_1 has been deleted by kgv. SHA-1: 74d796b6838f67d63372d7a544a763bf34856658 |
(0071437) git (administrator) 2017-10-14 12:19 |
Branch CR27356 has been deleted by kgv. SHA-1: ac8eec9dc9f629d94497ae0ff81cf938c4ffcc4c |
![]() |
|||
occt: master e52cb17a
Timestamp: 2016-04-15 14:12:28 Author: oan Committer: bugmaster [ Details ] [ Diff ] |
0027356: BRepTools::Clean() does not clean free edges from Poly_Polygon3D Added code to clean 3D polygons on edges in BRepTools::Clean(). |
||
mod - src/BRepTools/BRepTools.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/moddata_3/bug27356 | [ Diff ] [ File ] | ||
occt: master a4ab454c
Timestamp: 2016-04-15 14:12:28 Author: oan Committer: bugmaster [ Details ] [ Diff ] |
0027356: BRepTools::Clean() does not clean free edges from Poly_Polygon3D Added code to clean 3D polygons on edges in BRepTools::Clean(). |
||
mod - src/BRepTools/BRepTools.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/moddata_3/bug27356 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2016-04-05 17:04 | oan | New Issue | |
2016-04-05 17:04 | oan | Assigned To | => msv |
2016-04-05 17:04 | oan | File Added: comp.brep | |
2016-04-05 17:04 | oan | Relationship added | parent of 0026928 |
2016-04-05 17:22 | Timo | Note Added: 0052405 | |
2016-04-05 17:37 | oan | Note Added: 0052406 | |
2016-04-06 10:43 | Timo | Note Added: 0052420 | |
2016-04-12 15:41 | msv | Assigned To | msv => oan |
2016-04-12 15:41 | msv | Priority | normal => low |
2016-04-12 15:41 | msv | Status | new => assigned |
2016-04-15 17:12 | git | Note Added: 0052757 | |
2016-04-15 17:13 | oan | Note Added: 0052758 | |
2016-04-15 17:13 | oan | Assigned To | oan => msv |
2016-04-15 17:13 | oan | Status | assigned => resolved |
2016-04-15 18:17 | oan | Steps to Reproduce Updated | View Revisions |
2016-04-28 17:09 | msv | Note Added: 0053697 | |
2016-04-28 17:09 | msv | Assigned To | msv => bugmaster |
2016-04-28 17:09 | msv | Status | resolved => reviewed |
2016-04-29 16:37 | mkv | Assigned To | bugmaster => apv |
2016-04-29 17:37 | git | Note Added: 0053747 | |
2016-04-29 17:37 | apv | Note Added: 0053748 | |
2016-05-04 13:56 | git | Note Added: 0053794 | |
2016-05-04 13:58 | apv | Test case number | => bugs modalg_6 bug27356 |
2016-05-04 14:03 | apv | Note Added: 0053796 | |
2016-05-04 14:03 | apv | Assigned To | apv => oan |
2016-05-04 14:03 | apv | Status | reviewed => assigned |
2016-05-04 14:04 | apv | Note Added: 0053797 | |
2016-10-28 14:27 | apv | Note Added: 0059323 | |
2016-11-02 15:44 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-07-20 15:30 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-09-15 19:03 | abv | Relationship added | duplicate of 0012847 |
2017-09-15 19:08 | git | Note Added: 0070612 | |
2017-09-18 14:13 | git | Note Added: 0070632 | |
2017-09-18 14:16 | abv | Note Added: 0070633 | |
2017-09-18 14:16 | abv | Assigned To | oan => msv |
2017-09-18 14:16 | abv | Status | assigned => resolved |
2017-09-18 14:16 | abv | Steps to Reproduce Updated | View Revisions |
2017-09-18 14:16 | abv | Assigned To | msv => bugmaster |
2017-09-18 14:16 | abv | Status | resolved => reviewed |
2017-09-18 14:18 | kgv | Relationship added | related to 0028026 |
2017-09-18 16:43 | bugmaster | Note Added: 0070646 | |
2017-09-18 16:43 | bugmaster | Status | reviewed => tested |
2017-09-21 19:33 | bugmaster | Changeset attached | => occt master e52cb17a |
2017-09-21 19:33 | bugmaster | Status | tested => verified |
2017-09-21 19:33 | bugmaster | Resolution | open => fixed |
2017-09-21 19:51 | apn | Target Version | 7.3.0 => 7.2.0 |
2017-09-22 12:05 | bugmaster | Target Version | 7.2.0 => 7.3.0 |
2017-09-29 13:26 | bugmaster | Changeset attached | => occt master a4ab454c |
2017-09-29 17:11 | git | Note Added: 0070994 | |
2017-10-14 12:19 | git | Note Added: 0071437 | |
2018-02-08 22:42 | abv | Target Version | 7.3.0 => 7.4.0* |
2018-02-20 12:58 | aiv | Target Version | 7.4.0* => 7.3.0 |
2018-06-29 21:15 | aiv | Fixed in Version | => 7.3.0 |
2018-06-29 21:19 | aiv | Status | verified => closed |
Copyright © 2000 - 2019 MantisBT Team |