0027356: BRepTools::Clean() does not clean free edges from Poly_Polygon3D

Added code to clean 3D polygons on edges in BRepTools::Clean().